--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
